--- a/branch/thirupathur.html
+++ b/branch/thirupathur.html
@@ -325,12 +325,12 @@
                                         </div>
                                         <ul class="site-nav-dropdown">
                                           <li class="menu-lv-2">
-                                            <a class="  " href="../pages/about.html">
+                                            <a class="  " href="../pages/photos.html">
                                               Photos
                                             </a>
                                           </li>
                                           <li class="menu-lv-2">
-                                            <a class="  " href="../pages/services.html">
+                                            <a class="  " href="../pages/videos.html">
                                               Videos
                                             </a>
                                           </li>
