--- a/pages/photos.html
+++ b/pages/photos.html
@@ -1304,7 +1304,7 @@
                           <div class="product-container">
                             <a>
                               <div class="reveal">
-                                    <img src="../img/pdkt1.jpg" class="featured-image" alt="Glazed Vitrified Tiles">
+                                    <img src="../img/Gallery/bathroom5.jpg" class="featured-image" alt="Glazed Vitrified Tiles">
                                     <img  src="../img/KAG.png" class="hidden-feature_img" alt="Glazed Vitrified Tiles" />
                               </div>
                             </a>
