--- a/branch/karaikudi.html
+++ b/branch/karaikudi.html
@@ -707,8 +707,8 @@
                           <div class="product-container">
                             <a>
                               <div class="reveal">
-                                    <img src="../cdn.shopify.com/s/files/1/0437/5671/6194/products/Product5_large00d1.jpg?v=1597918329" class="featured-image" alt="Glazed Vitrified Tiles">
-                                    <img  src="../img/KAG.png" class="hidden-feature_img" alt="Glazed Vitrified Tiles" />
+                                    <img src="../img/Gallery/kkdi1.jpeg" class="featured-image" alt="Glazed Vitrified Tiles">
+                                    <img  src="../img/sam.png" class="hidden-feature_img" alt="Glazed Vitrified Tiles" />
                               </div>
                             </a>
 
@@ -716,95 +716,103 @@
                         </div>
                       </li>
 
-                      <li class="grid__item item-row wide--one-quarter post-large--one-quarter large--one-quarter medium--one-half small--one-half  medium--one-half small--one-half  " id="product-5617934532770"  id="product-5617934532770">
+                      <li class="grid__item item-row wide--one-quarter post-large--one-quarter large--one-quarter medium--one-half small--one-half  medium--one-half small--one-half  " id="product-5617711743138"  id="product-5617711743138">
                         <div class="products product-hover-11">
                           <div class="product-container">
                             <a>
                               <div class="reveal">
-                                <img src="../cdn.shopify.com/s/files/1/0437/5671/6194/products/Product19_5c96265c-bc0f-4fe7-a5bc-047adee512c1_large6fb6.jpg?v=1597922267" class="featured-image" alt="Imperial Red">
-                                <img  src="../img/KAG.png" class="hidden-feature_img" alt="Glazed Vitrified Tiles" />
+                                    <img src="../img/Gallery/kkdi8.jpeg" class="featured-image" alt="Glazed Vitrified Tiles">
+                                    <img  src="../img/sam.png" class="hidden-feature_img" alt="Glazed Vitrified Tiles" />
                               </div>
                             </a>
+
                           </div>
                         </div>
                       </li>
 
-                      <li class="grid__item item-row wide--one-quarter post-large--one-quarter large--one-quarter medium--one-half small--one-half  medium--one-half small--one-half  " id="product-5617711055010"  id="product-5617711055010">
+                      <li class="grid__item item-row wide--one-quarter post-large--one-quarter large--one-quarter medium--one-half small--one-half  medium--one-half small--one-half  " id="product-5617711743138"  id="product-5617711743138">
                         <div class="products product-hover-11">
                           <div class="product-container">
                             <a>
                               <div class="reveal">
-                                <img src="../cdn.shopify.com/s/files/1/0437/5671/6194/products/Product3_large6042.jpg?v=1597917902" class="featured-image" alt="Ceramic Floor Tiles">
-                                <img  src="../img/KAG.png" class="hidden-feature_img" alt="Glazed Vitrified Tiles" />
+                                    <img src="../img/Gallery/kkdi12.jpeg" class="featured-image" alt="Glazed Vitrified Tiles">
+                                    <img  src="../img/sam.png" class="hidden-feature_img" alt="Glazed Vitrified Tiles" />
                               </div>
                             </a>
-                          </div>
-                        </div>
-                      </li> 
 
-                      <li class="grid__item item-row wide--one-quarter post-large--one-quarter large--one-quarter medium--one-half small--one-half  medium--one-half small--one-half  " id="product-5617868144802"  id="product-5617868144802">
-                        <div class="products product-hover-11">
-                          <div class="product-container">
-                            <a>
-                              <div class="reveal"> 
-                                <img src="../cdn.shopify.com/s/files/1/0437/5671/6194/products/Product18_459ab3cf-f025-4964-8047-161aef3417cf_largeb10c.jpg?v=1597921991" class="featured-image" alt="Rossa Verona">
-                                <img  src="../img/KAG.png" class="hidden-feature_img" alt="Glazed Vitrified Tiles" />
-                              </div> 
-                            </a>
                           </div>
                         </div>
-                      </li> 
+                      </li>
 
-                      <li class="grid__item item-row wide--one-quarter post-large--one-quarter large--one-quarter medium--one-half small--one-half  medium--one-half small--one-half  " id="product-5617868144802"  id="product-5617868144802">
+                      <li class="grid__item item-row wide--one-quarter post-large--one-quarter large--one-quarter medium--one-half small--one-half  medium--one-half small--one-half  " id="product-5617711743138"  id="product-5617711743138">
                         <div class="products product-hover-11">
                           <div class="product-container">
                             <a>
-                              <div class="reveal"> 
-                                <img src="../cdn.shopify.com/s/files/1/0437/5671/6194/products/Product2_large69e4.jpg?v=1597918195" class="featured-image" alt="Galaxy Tiles">
-                                <img  src="../img/KAG.png" class="hidden-feature_img" alt="Glazed Vitrified Tiles" />
-                              </div> 
+                              <div class="reveal">
+                                    <img src="../img/Gallery/kkdi15.jpeg" class="featured-image" alt="Glazed Vitrified Tiles">
+                                    <img  src="../img/sam.png" class="hidden-feature_img" alt="Glazed Vitrified Tiles" />
+                              </div>
                             </a>
-                          </div>
-                        </div>
-                      </li> 
 
-                      <li class="grid__item item-row wide--one-quarter post-large--one-quarter large--one-quarter medium--one-half small--one-half  medium--one-half small--one-half  " id="product-5617868144802"  id="product-5617868144802">
+                          </div>
+                        </div>
+                      </li>
+
+                      <li class="grid__item item-row wide--one-quarter post-large--one-quarter large--one-quarter medium--one-half small--one-half  medium--one-half small--one-half  " id="product-5617711743138"  id="product-5617711743138">
                         <div class="products product-hover-11">
                           <div class="product-container">
                             <a>
-                              <div class="reveal"> 
-                                <img src="../cdn.shopify.com/s/files/1/0437/5671/6194/products/Product17_b781a193-4262-49ef-84e1-b2bf5161710f_large0c78.jpg?v=1597920236" class="featured-image" alt="Giallo Veneziano">
-                                <img  src="../img/KAG.png" class="hidden-feature_img" alt="Glazed Vitrified Tiles" />
-                              </div> 
+                              <div class="reveal">
+                                    <img src="../img/Gallery/kkdi21.jpeg" class="featured-image" alt="Glazed Vitrified Tiles">
+                                    <img  src="../img/sam.png" class="hidden-feature_img" alt="Glazed Vitrified Tiles" />
+                              </div>
                             </a>
+
                           </div>
                         </div>
-                      </li> 
-                      
-                      <li class="grid__item item-row wide--one-quarter post-large--one-quarter large--one-quarter medium--one-half small--one-half  medium--one-half small--one-half  " id="product-5617868144802"  id="product-5617868144802">
+                      </li>
+
+                      <li class="grid__item item-row wide--one-quarter post-large--one-quarter large--one-quarter medium--one-half small--one-half  medium--one-half small--one-half  " id="product-5617711743138"  id="product-5617711743138">
                         <div class="products product-hover-11">
                           <div class="product-container">
                             <a>
-                              <div class="reveal"> 
-                                <img src="../cdn.shopify.com/s/files/1/0437/5671/6194/products/Product18_459ab3cf-f025-4964-8047-161aef3417cf_largeb10c.jpg?v=1597921991" class="featured-image" alt="Rossa Verona">
-                                <img  src="../img/KAG.png" class="hidden-feature_img" alt="Glazed Vitrified Tiles" />
-                              </div> 
+                              <div class="reveal">
+                                    <img src="../img/Gallery/kkdi27.jpeg" class="featured-image" alt="Glazed Vitrified Tiles">
+                                    <img  src="../img/sam.png" class="hidden-feature_img" alt="Glazed Vitrified Tiles" />
+                              </div>
                             </a>
+
                           </div>
                         </div>
-                      </li> 
-                      <li class="grid__item item-row wide--one-quarter post-large--one-quarter large--one-quarter medium--one-half small--one-half  medium--one-half small--one-half  " id="product-5617868144802"  id="product-5617868144802">
+                      </li>
+
+                      <li class="grid__item item-row wide--one-quarter post-large--one-quarter large--one-quarter medium--one-half small--one-half  medium--one-half small--one-half  " id="product-5617711743138"  id="product-5617711743138">
                         <div class="products product-hover-11">
                           <div class="product-container">
                             <a>
-                              <div class="reveal"> 
-                                <img src="../cdn.shopify.com/s/files/1/0437/5671/6194/products/Product4_large029b.jpg?v=1597918738" class="featured-image" alt="Polished Vitrified Tiles">
-                                <img  src="../img/KAG.png" class="hidden-feature_img" alt="Glazed Vitrified Tiles" />
-                              </div> 
+                              <div class="reveal">
+                                    <img src="../img/Gallery/kkdi39.jpeg" class="featured-image" alt="Glazed Vitrified Tiles">
+                                    <img  src="../img/sam.png" class="hidden-feature_img" alt="Glazed Vitrified Tiles" />
+                              </div>
                             </a>
+
                           </div>
                         </div>
-                      </li> 
+                      </li>
+
+                      <li class="grid__item item-row wide--one-quarter post-large--one-quarter large--one-quarter medium--one-half small--one-half  medium--one-half small--one-half  " id="product-5617711743138"  id="product-5617711743138">
+                        <div class="products product-hover-11">
+                          <div class="product-container">
+                            <a>
+                              <div class="reveal">
+                                    <img src="../img/Gallery/kkdi36.jpeg" class="featured-image" alt="Glazed Vitrified Tiles">
+                                    <img  src="../img/sam.png" class="hidden-feature_img" alt="Glazed Vitrified Tiles" />
+                              </div>
+                            </a>
+
+                          </div>
+                        </div>
+                      </li>
 
                     </ul>
                   </div>
