--- a/branch/thirupathur.html
+++ b/branch/thirupathur.html
@@ -253,7 +253,7 @@
                                     </li>
                                     <li class="menu-lv-1 item dropdown no-mega-menu">
                                       <a class="menu__moblie "  href="#">
-                                        Product
+                                        Brands
                                         <span class="icon-dropdown" data-toggle-menu-mb>
                                           <i class="fa fa-angle-right" aria-hidden="true"></i>
                                         </span>
@@ -263,7 +263,7 @@
                                           <span class="icon-dropdown">
                                             <i class="fa fa-angle-left" aria-hidden="true"></i>
                                           </span>
-                                          Product
+                                          Brands
                                         </div>
                                         <ul class="site-nav-dropdown">
                                           <li class="menu-lv-2">
@@ -339,7 +339,7 @@
                                     </li>
                                     <li class="menu-lv-1 item">
                                       <a class="menu__mobile"  href="../pages/contact.html">
-                                        Contact
+                                        Contact us
                                       </a>
                                     </li>
                                   </ul>
