--- a/pages/about.html
+++ b/pages/about.html
@@ -274,7 +274,7 @@
                                     </li>
                                     <li class="menu-lv-1 item dropdown no-mega-menu">
                                       <a class="menu__moblie"  href="#">
-                                        Product
+                                        Brands
                                         <span class="icon-dropdown" data-toggle-menu-mb>
                                           <i class="fa fa-angle-right" aria-hidden="true"></i>
                                         </span>
@@ -284,7 +284,7 @@
                                           <span class="icon-dropdown">
                                             <i class="fa fa-angle-left" aria-hidden="true"></i>
                                           </span>
-                                          Product
+                                          Brands
                                         </div>
                                         <ul class="site-nav-dropdown">
                                           <li class="menu-lv-2">
@@ -527,7 +527,8 @@
 
                           <div
                             class="grid__item wide--one-half post-large--one-half large--one-half medium--grid__item small-grid__item">
-                            <h2 style="color:#8a704d">SAM GROUP OF COMPANIES</h2>
+                            <img src="../img/samgroup.png" alt="" />
+                            <!-- <h2 style="color:#8a704d">SAM GROUP OF COMPANIES</h2> -->
 
                             <p style="text-align: justify; color:#878787">SAM GROUP OF COMPANIES embarked SAM BUILDERS in 2017 and kick started the first project in PUDHUVAYAL.
                             SAM GROUP OF COMPANIES inagruated SAM CERAMICS, tiles and sanitaryware showroom at AMARAVATHI PUDHUR in the year 2017 and we hold the distributor rights of 
@@ -579,7 +580,7 @@
                       <div class="container">
 
                         <div class="main-heading">
-                          <h2> The floor of heaven</h2>
+                          <h2> The Home of heaven</h2>
                         </div>
                         <div class="invisible-small"></div>
 
@@ -587,11 +588,13 @@
                           <div
                             class="grid__item wide--one-third post-large--one-third large--one-third medium--one-half small-grid__item">
                             <div class="text-block">
-
-                              <h4> For Both Home and Office</h4>
+                              <img
+                                src="../img/Gallery/home.png"
+                                alt="" title="" />
+                              <!-- <h4> For Both Home and Office</h4>
                               <p><sup>X</sup> Best Floor Tiles <sub>X</sub></p>
                               <p><sup>X</sup> Best Wall Tiles <sub>X</sub></p>
-                              <p><sup>X</sup> Sanitary Wares <sub>X</sub></p>
+                              <p><sup>X</sup> Sanitary Wares <sub>X</sub></p> -->
                               <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                                 incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
                                 exercitation ullamco laboris nisi ut aliquip ex ea</p>
@@ -608,7 +611,7 @@
                             <div class="center-img">
 
                               <img
-                                src="../cdn.shopify.com/s/files/1/0437/5671/6194/files/abo-2_582x3926cbd.png?v=1598351348"
+                                src="../img/Gallery/home2.png"
                                 alt="" title="" />
 
                             </div>
@@ -779,31 +782,31 @@
 
                             <div class="item">
 
-                              <a href="#"> <img src="../img/KAG.png" alt="" /></a>
+                              <a href="https://www.kagindia.com/"> <img src="../img/KAG.png" alt="" /></a>
 
                             </div>
 
                             <div class="item">
 
-                              <a href="#"> <img style="margin-top: 20%;" ; src="../img/telkon.png" alt="" /></a>
+                              <a href="https://www.kagindia.com/division/tecton-tiles/1"> <img style="margin-top: 20%;" ; src="../img/telkon.png" alt="" /></a>
 
                             </div>
 
                             <div class="item">
 
-                              <a href="#"> <img style="margin-top: 20%;" src="../img/asianpaints.jpg" alt="" /></a>
+                              <a href="https://www.asianpaints.com/"> <img style="margin-top: 20%;" src="../img/asianpaints.jpg" alt="" /></a>
 
                             </div>
 
                             <div class="item">
 
-                              <a href="#"> <img style="margin-top: 10%;" src="../img/centuryply.png" alt="" /></a>
+                              <a href="https://www.centuryply.com/"> <img style="margin-top: 10%;" src="../img/centuryply.png" alt="" /></a>
 
                             </div>
 
                             <div class="item">
 
-                              <a href="#"> <img style="margin-top: 10%;" src="../img/GA logo.jpeg" alt="" /></a>
+                              <a href="https://gmmodular.com/"> <img style="margin-top: 10%;" src="../img/GA logo.jpeg" alt="" /></a>
 
                             </div>
 
