--- a/pages/catalogue.html
+++ b/pages/catalogue.html
@@ -287,7 +287,7 @@
                                     </li>
                                     <li class="menu-lv-1 item dropdown no-mega-menu">
                                       <a class="current"  href="#">
-                                        Product
+                                        Brands
                                         <span class="icon-dropdown" data-toggle-menu-mb>
                                           <i class="fa fa-angle-right" aria-hidden="true"></i>
                                         </span>
@@ -297,7 +297,7 @@
                                           <span class="icon-dropdown">
                                             <i class="fa fa-angle-left" aria-hidden="true"></i>
                                           </span>
-                                          Product
+                                          Brands
                                         </div>
                                         <ul class="site-nav-dropdown">
                                           <li class="menu-lv-2">
@@ -375,7 +375,7 @@
                                     </li>
                                     <li class="menu-lv-1 item">
                                       <a class="menu__mobile"  href="contact.html">
-                                        Contact
+                                        Contact us
                                       </a>
                                     </li>
                                   </ul>
