--- a/products/kagtiles.html
+++ b/products/kagtiles.html
@@ -384,7 +384,7 @@
                                       </li>
                                       <li class="menu-lv-1 item dropdown no-mega-menu">
                                         <a class="current" href="#">
-                                          Product
+                                          Brands
                                           <span class="icon-dropdown" data-toggle-menu-mb>
                                             <i class="fa fa-angle-right" aria-hidden="true"></i>
                                           </span>
@@ -394,7 +394,7 @@
                                             <span class="icon-dropdown">
                                               <i class="fa fa-angle-left" aria-hidden="true"></i>
                                             </span>
-                                            Product
+                                            Brands
                                           </div>
                                           <ul class="site-nav-dropdown">
                                             <li class="menu-lv-2">
@@ -472,7 +472,7 @@
                                       </li>
                                       <li class="menu-lv-1 item">
                                         <a class="menu__mobile" href="../pages/contact.html">
-                                          Contact
+                                          Contact us
                                         </a>
                                       </li>
                                     </ul>
