pdkt photos updated

--- a/branch/karaikudi.html
+++ b/branch/karaikudi.html
@@ -693,7 +693,7 @@
                 <div class="border-title">
                   <!-- <div class="short-desc"><p style="color:#303030;">Visit Our Online Store</p></div> -->
                   <h2 class="section-header__title" style="color:#8a704d;">
-                    Our Products
+                    Gallery
                   </h2>
                 </div>
               </div>
@@ -913,7 +913,7 @@
                                     </div>
                                     <h4>Email</h4>
                                     <p>
-                                      <a title="" href="#">info@samceramics.com</a><br>
+                                      <!-- <a title="" href="#">info@samceramics.com</a><br> -->
                                       <a title="" href="#">samenterpriseskkdi@outlook.com</a>
                                     </p>
     
