--- a/branch/pudukkottai.html
+++ b/branch/pudukkottai.html
@@ -685,7 +685,7 @@
                 <div class="border-title">
                   <!-- <div class="short-desc"><p style="color:#303030;">Visit Our Online Store</p></div> -->
                   <h2 class="section-header__title" style="color:#8a704d;">
-                    Our Products
+                    Gallery
                   </h2>
                 </div>
               </div>
