--- a/index.html
+++ b/index.html
@@ -506,14 +506,14 @@
                     </style>
                     </div>
                     <div class="slick-list slider_style_3 slider-1596439642225-list">                
-                      <img src="img/homeslider2.jpg"  class="slide-img medium-down--hide" alt="" />
-                      <img src="img/homeslider2.jpg"  class="slide-img wide--hide post-large--hide large--hide" alt="" />
+                      <img src="img/homeslider3.jpg"  class="slide-img medium-down--hide" alt="" />
+                      <img src="img/homeslider3.jpg"  class="slide-img wide--hide post-large--hide large--hide" alt="" />
                       <div class="slider-content slider-content-bg">
                         <div class="slide_left">
                           <div>
-                            <img class="normal-logo" src="img/shdblack.png" alt="Sam ceramics" itemprop="logo">
+                            <img class="normal-logo" src="img/shdwhite.png" alt="Sam ceramics" itemprop="logo">
                           </div>
-                          <h2 class="slide-heading animated" style="font-size: 50px; color:#000000;">
+                          <h2 class="slide-heading animated" style="font-size: 50px; color:#ffffff;">
                             Bring the sunshine to your home               
                           </h2>
                           <div class="slider_inner_block">
