--- a/pages/contact.html
+++ b/pages/contact.html
@@ -845,9 +845,10 @@
       </div>
 
       <div class="dt-sc-hr-invisible-large"></div>
+      
 
     </main>
-
+    <img src="../img/samcomplaint.png" style="width:100%">
 
     <div id="shopify-section-footer" class="shopify-section">
       <footer class="site-footer footer-default" data-section-id="footer" data-section-type="footer-section"
