--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                                     </li>
                                     <li class="menu-lv-1 item dropdown no-mega-menu">
                                       <a class="menu__moblie "  href="pages/catalogue.html">
-                                        Brands
+                                        Our Brands
                                         <span class="icon-dropdown" data-toggle-menu-mb>
                                           <i class="fa fa-angle-right" aria-hidden="true"></i>
                                         </span>
@@ -262,7 +262,7 @@
                                           <span class="icon-dropdown">
                                             <i class="fa fa-angle-left" aria-hidden="true"></i>
                                           </span>
-                                          Brands
+                                          Our Brands
                                         </div>
                                         <ul class="site-nav-dropdown">
                                           <li class="menu-lv-2">
