--- a/pages/about.html
+++ b/pages/about.html
@@ -273,8 +273,8 @@
                                       </a>
                                     </li>
                                     <li class="menu-lv-1 item dropdown no-mega-menu">
-                                      <a class="menu__moblie"  href="#">
-                                        Brands
+                                      <a class="menu__moblie"  href="catalogue.html">
+                                        Our Brands
                                         <span class="icon-dropdown" data-toggle-menu-mb>
                                           <i class="fa fa-angle-right" aria-hidden="true"></i>
                                         </span>
@@ -284,7 +284,7 @@
                                           <span class="icon-dropdown">
                                             <i class="fa fa-angle-left" aria-hidden="true"></i>
                                           </span>
-                                          Brands
+                                          Our Brands
                                         </div>
                                         <ul class="site-nav-dropdown">
                                           <li class="menu-lv-2">
@@ -331,7 +331,7 @@
                                       </div>
                                     </li>
                                     <li class="menu-lv-1 item dropdown no-mega-menu">
-                                      <a class="menu__moblie "  href="#">
+                                      <a class="menu__moblie "  href="photos.html">
                                         Gallery
                                         <span class="icon-dropdown" data-toggle-menu-mb>
                                           <i class="fa fa-angle-right" aria-hidden="true"></i>
