--- a/pages/catalogue.html
+++ b/pages/catalogue.html
@@ -286,8 +286,8 @@
                                       </a>
                                     </li>
                                     <li class="menu-lv-1 item dropdown no-mega-menu">
-                                      <a class="current"  href="#">
-                                        Brands
+                                      <a class="current"  href="catalogue.html">
+                                        Our Brands
                                         <span class="icon-dropdown" data-toggle-menu-mb>
                                           <i class="fa fa-angle-right" aria-hidden="true"></i>
                                         </span>
@@ -297,7 +297,7 @@
                                           <span class="icon-dropdown">
                                             <i class="fa fa-angle-left" aria-hidden="true"></i>
                                           </span>
-                                          Brands
+                                          Our Brands
                                         </div>
                                         <ul class="site-nav-dropdown">
                                           <li class="menu-lv-2">
@@ -344,7 +344,7 @@
                                       </div>
                                     </li>
                                     <li class="menu-lv-1 item dropdown no-mega-menu">
-                                      <a class="menu__moblie "  href="#">
+                                      <a class="menu__moblie "  href="photos.html">
                                         Gallery
                                         <span class="icon-dropdown" data-toggle-menu-mb>
                                           <i class="fa fa-angle-right" aria-hidden="true"></i>
