--- a/products/asianpaintsadhesives.html
+++ b/products/asianpaintsadhesives.html
@@ -378,8 +378,8 @@
                                         </a>
                                       </li>
                                       <li class="menu-lv-1 item dropdown no-mega-menu">
-                                        <a class="current" href="#">
-                                          Brands
+                                        <a class="current" href="../pages/catalogue.html">
+                                          Our Brands
                                           <span class="icon-dropdown" data-toggle-menu-mb>
                                             <i class="fa fa-angle-right" aria-hidden="true"></i>
                                           </span>
@@ -389,7 +389,7 @@
                                             <span class="icon-dropdown">
                                               <i class="fa fa-angle-left" aria-hidden="true"></i>
                                             </span>
-                                            Brands
+                                            Our Brands
                                           </div>
                                           <ul class="site-nav-dropdown">
                                             <li class="menu-lv-2">
@@ -436,7 +436,7 @@
                                         </div>
                                       </li>
                                       <li class="menu-lv-1 item dropdown no-mega-menu">
-                                        <a class="" href="#">
+                                        <a class="" href="../pages/photos.html">
                                           Gallery
                                           <span class="icon-dropdown" data-toggle-menu-mb>
                                             <i class="fa fa-angle-right" aria-hidden="true"></i>
