--- a/products/samsanitaryware.html
+++ b/products/samsanitaryware.html
@@ -393,8 +393,8 @@
                                         </a>
                                       </li>
                                       <li class="menu-lv-1 item dropdown no-mega-menu">
-                                        <a class="current" href="#">
-                                          Brands
+                                        <a class="current" href="../pages/catalogue.html">
+                                          Our Brands
                                           <span class="icon-dropdown" data-toggle-menu-mb>
                                             <i class="fa fa-angle-right" aria-hidden="true"></i>
                                           </span>
@@ -404,7 +404,7 @@
                                             <span class="icon-dropdown">
                                               <i class="fa fa-angle-left" aria-hidden="true"></i>
                                             </span>
-                                            Brands
+                                            Our Brands
                                           </div>
                                           <ul class="site-nav-dropdown">
                                             <li class="menu-lv-2">
@@ -451,7 +451,7 @@
                                         </div>
                                       </li>
                                       <li class="menu-lv-1 item dropdown no-mega-menu">
-                                        <a class="" href="#">
+                                        <a class="" href="../pages/photos.html">
                                           Gallery
                                           <span class="icon-dropdown" data-toggle-menu-mb>
                                             <i class="fa fa-angle-right" aria-hidden="true"></i>
