--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   
   <!-- Title and description ================================================== -->
   <title>
-    SAM Ceramics |  
+    SAM Ceramics | Ceramics and lighting showroom in Karaikudi | Ceramics showroom near me | Tiles, Lighting showroom |  
   </title>
   
   <!-- Social meta ================================================== -->
