--- a/pages/catalogue.html
+++ b/pages/catalogue.html
@@ -24,7 +24,7 @@
 
   <!-- Title and description ================================================== -->
   <title>
-    Catalogue &ndash; Sam Ceramics
+    Catalogue &ndash; Sam Ceramics | Ceramics and lighting showroom in Karaikudi | Ceramics showroom near me | Tiles, Lighting showroom|  
   </title>
 
   <!-- Social meta ================================================== -->
