--- a/pages/contact.html
+++ b/pages/contact.html
@@ -25,7 +25,7 @@
 
   <!-- Title and description ================================================== -->
   <title>
-    Contact &ndash; SAM Ceramics
+    Contact &ndash; SAM Ceramics | Ceramics and lighting showroom in Karaikudi | Ceramics showroom near me | Tiles, Lighting showroom |  
   </title>
 
   <!-- Social meta ================================================== -->
