--- a/pages/videos.html
+++ b/pages/videos.html
@@ -24,7 +24,7 @@
   <link rel="shortcut icon" href="../img/sam.png" type="image/png" />
   <!-- Title and description ================================================== -->
   <title>
-    SAM Ceramics | Gallery - Video
+    Videos - SAM Ceramics | Ceramics and lighting showroom in Karaikudi | Ceramics showroom near me | Tiles, Lighting showroom |  
   </title>
 
   <!-- Social meta ================================================== -->
