--- a/pages/videos.html
+++ b/pages/videos.html
@@ -28,7 +28,8 @@
   </title>
 
   <!-- Social meta ================================================== -->
-
+ <meta name="description" content="Tiles and ceramics showroom in Karaikudi and Pudukkottai">
+  <meta name="keywords" content="Ceramics showroom near me, ceramic shop in karaikudi, ceramics in pudukkottai, tiles design, faucet models, interior design, interior decor, kag tiles showroom, tiles showroom design ideas, rak ceramics, sam ceramics, sam home decors, sam interior decors, sam tiles, kag, tecton tiles,	super ceramic showroom, ceramic showroom video">
 
   <meta property="og:type" content="website">
   <meta property="og:title" content="Gallery">
