--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
   <link rel="shortcut icon" href="img/sam.png" type="image/png" />
   
    <meta name="description" content="Tiles and ceramics showroom in Karaikudi and Pudukkottai">
-  <meta name="keywords" content="Ceramics showroom near me, ceramic shop in karaikudi, ceramics in pudukkottai, tiles design, faucet models, interior design, interior decor, kag tiles showroom, tiles showroom design ideas, rak ceramics, sam ceramics, sam home decors, sam interior decors, sam tiles, kag, tecton tiles,	super ceramic showroom, ceramic showroom video">
+  <meta name="keywords" content="Ceramics showroom near me, ceramic shop in karaikudi, ceramics in pudukkottai, tiles design, faucet models, interior design, interior decor, kag tiles showroom, tiles showroom design ideas,tiles shop in karaikudi
+tiles showroom in karaikudi,
+tiles in karaikudi,
+karaikudi tiles shop,
+karaikudi tiles shop, chennai rak ceramics, sam ceramics, sam home decors, sam interior decors, sam tiles, kag, tecton tiles,	super ceramic showroom, ceramic showroom video">
   
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-QFSRG401CL"></script>
