--- a/index.html
+++ b/index.html
@@ -15,12 +15,10 @@
   <link rel="shortcut icon" href="img/sam.png" type="image/png" />
   
    <meta name="description" content="Tiles and ceramics showroom in Karaikudi and Pudukkottai">
-  <meta name="keywords" content="Ceramics showroom near me, ceramic shop in karaikudi, ceramics in pudukkottai, tiles design, faucet models, interior design, interior decor, kag tiles showroom, tiles showroom design ideas,tiles shop in karaikudi
-tiles showroom in karaikudi,
-tiles in karaikudi,
-karaikudi tiles shop,
-karaikudi tiles shop, chennai rak ceramics, sam ceramics, sam home decors, sam interior decors, sam tiles, kag, tecton tiles,	super ceramic showroom, ceramic showroom video">
-  
+  <meta name="keywords" content="Ceramics showroom near me, ceramic shop in karaikudi, ceramics in pudukkottai, tiles design, faucet models, interior design, interior decor, kag tiles showroom, tiles showroom design ideas,tiles shop in karaikudi, tiles showroom in karaikudi,, tiles in karaikudi,,karaikudi tiles shop,
+karaikudi tiles shop, chennai rak ceramics, sam ceramics, sam home decors, sam interior decors, sam tiles, kag, tecton tiles,	super ceramic showroom, ceramic showroom video, tiles showroom in trichy,tiles showroom advertisement,tiles showroom about,k a g tiles showroom,kag tiles models,kag tiles,kag tiles model name
+,kag tiles model,k a g tiles model,how to start a tiles showroom,how to open tile showroom,tiles showroom business,tiles showroom cost,kag tiles pudukkottai,tiles showroom in pudukkottai,tiles price in pudukkottai,tile showroom counter design,tiles showroom design,tiles showroom display
+,tiles showroom display images,tiles showroom decoratio,tiles showroom exterior,kag tiles showroom,kag tiles showroom in trichy,tiles showroom hd images,lighting showroom design ideas,lighting showroom near me,lighting showroom display ideas,lighting showroom design,lighting showroom ideas">  
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-QFSRG401CL"></script>
   <!---------------------------->
