Contact form changed from gvbeema to samenterpriseskkdi

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -751,7 +751,7 @@
                           <h3> Contact Form </h3>
                           <!-- <form method="post" action="https://tileo.myshopify.com/contact#contact_form" id="contact_form" accept-charset="UTF-8" class="contact-form">
                           <input type="hidden" name="form_type" value="contact" /><input type="hidden" name="utf8" value="✓" /> -->
-                          <form action="https://formcarry.com/s/8B1BAopqUn" id="contact_form" method="POST"
+                          <form action="https://formcarry.com/s/s_H3ndWXiO" id="contact_form" method="POST"
                             accept-charset="UTF-8" class="contact-form">
                             <input type="text" id="ContactFormName" placeholder="Enter your Name" name="Name"
                               autocapitalize="words" autocomplete="off">
